<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/margin_large"
    tools:context=".ui.OrderDialogFragment">

    <TextView
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_large"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textAppearance="@style/TextAppearance.AppTheme.Headline2"
        android:text="@string/reorder_list" />


    <RadioGroup
        android:id="@+id/orderGroup"
        android:minWidth="240dp"
        android:layout_margin="@dimen/margin_large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/orderByTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/orderByTitle" />

        <RadioButton
            android:id="@+id/orderByDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/orderByDate" />

    </RadioGroup>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/apply"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large"
        android:text="Apply"
        app:layout_constraintTop_toBottomOf="@+id/orderGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/reset"
        style="@style/AppTheme.Button"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/reset"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large"
        android:text="@string/reset"
        style="@style/AppTheme.Button"
        android:background="@android:color/transparent"
        app:layout_constraintTop_toBottomOf="@+id/orderGroup"
        app:layout_constraintEnd_toStartOf="@+id/apply"
        app:layout_constraintStart_toStartOf="parent"
         />


</androidx.constraintlayout.widget.ConstraintLayout>